Added text to index.html

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>This is my first webpage</title>
 </head>
 <body>
 <h1>Hello World!</h1>
+<p>My name is Karan and this is the first time I've created a webpage. This is actually pretty cool. <strong>I cannot wait to learn more!</strong></p>
+
+<strong>This is here to be bold!</strong>
+
+<p><em>This is just a test to see what this looks like. I assume it italicizes text. Guess I was right!</em></p>
+
+<p>These are things that you need to create your own webpage:</p>
+<ol>
+	<li>A computer</li>
+	<li>Text editor</li>
+	<li>Internet access</li>
+</ol>
+<p>Here are some things about myself:</p>
+<ul>
+	<li>I was born in NYC</li>
+	<li>I'm 25 years old</li>
+	<li>My parents are from India</li>
+</ul>
 </body>
 </html>
