--- a/html/forms/example-form.html
+++ b/html/forms/example-form.html
@@ -1,18 +1,18 @@
-<form name="adventure" action="" method="post">
+<form name="adventure" action="https://httpbin.org/post" method="post">
   <fieldset>
     <div>
       <label>Full name:</label>
-      <input type="text" name="fullname">
+      <input type="text" name="name">
     </div>
 
     <div>
       <label>Email:</label>
-      <input type="email" name="email">
+      <input type="email" name="mail">
     </div>
 
     <div>
       <label>Password:</label>
-      <input type="password" name="password">
+      <input type="password" name="pass">
     </div>
   </fieldset>
 
