Added three more animals to table

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -13,7 +13,22 @@
 	</tr>
 	<tr>
 		<td>Dog</td>
-		<td>Mammal</td>
+		<td>Mammalia (Mammals)</td>
+		<td>4</td>
+	</tr>
+	<tr>
+		<td>Pigeon</td>
+		<td>Aves (Bird)</td>
+		<td>2</td>
+	</tr>
+	<tr>
+		<td>Atlantic Salmon</td>
+		<td>Actinopterygii (Bony Fish)</td>
+		<td>0</td>
+	</tr>
+	<tr>
+		<td>Salamander</td>
+		<td>Amphibia (Amphibians)</td>
 		<td>4</td>
 	</tr>
 
