Updated header and added some text in table-practice.html.

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Simple table of animals and some details</title>
 </head>
 <body>
+
+<p>Here is a simple table with the animal, the class it belongs to (in regards to classification), and the number of legs it has.</p>
 
 <table border=1>
 	<tr>
