Added second table to table-practice.html

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -36,5 +36,37 @@
 
 </table>
 
+<div>
+
+<table border=1>
+    <tr>
+      <th>Color</th>
+      <th colspan=2>Shape</th>
+      <th># of sides</th>
+    </tr>
+    <tr>
+      <td>Red</td>
+      <td colspan=2>Circle</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <td rowspan="2">Blue</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td colspan=2>Triangle</td>
+      <td>3</td>
+    </tr>
+    <tr>
+    	<td>Green</td>
+    	<td colspan=2>Square</td>
+    	<td>4</td>
+    </tr>
+</table>
+
+</div>
+
 </body>
 </html>
