Updated index.html with answers to Release questions.

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -51,4 +51,23 @@
         <p>This is the footer</p>
     </footer>
 </body>
+<h1>Release 4</h1>
+<p>
+What is the purpose of HTML5 semantic tags? Which ones do you see as most useful?
+
+HTML5 semantic tags are used to help structure content on HTML pages in a thoughtful manner while making it more accessible. Of the ones we had gone over today, I think <main> is a very useful tag since it makes the author really focus on placing the unique content for the page in that section. I think <section> is another useful tag since it has a lot of uses in HTML. 
+
+What is the order the browser uses to display elements on a page?
+
+From my understanding, I thought the browser wroks from top to bottom to properly display elements on a page. First is the doctype declaration, followed by checking the head to see if there is any additonal information needed to display elements listed in the body of the page. 
+
+What did you learn about Sublime in this challenge? Do you think you'll create more handy snippets at a later date?
+
+Creating and using snippets in Sublime is incredibly useful, and creating custom snippets is a realtively easy process. After today's GPS session, there are definitely more snippets I plan on creating for future use.
+
+What concept in this challenge was most difficult for you? How can you improve your understanding of this concept?
+
+I'm still very weak with visualing tables in HTML. Especialy when rowspan colspan start being used. I think working with tables in HTML more frequently should help me visualize tables better. 
+
+</p>
 </html>
