Updated index.html with link to style.css and added class to <main> element.

--- a/css/responsive-design/index.html
+++ b/css/responsive-design/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Wildflowers Article</title>
+  <link href="style.css" type="text/css" rel="stylesheet"/>
+
 </head>
 <body>
   <section id="external-links">
@@ -12,7 +14,7 @@
       <li><a href="https://www.pinterest.com/pscheen/wildflowers/">Wildflower Gallery on Pinterest</a></li>
     </ul>
   </section>
-  <main>
+  <main class="main">
     <h1>Wildflowers: The Hottest "Found Decor" Trend</h1>
     <figure>
       <img src="images/orange_flowers.jpg" alt="orange wildflowers">
