Added images to index.html. Updated style.css with more text.

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -5,6 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<p id="test">This is just for testing purposes</p>
+
+<img id="octopus" src="octopus.png">
+<img id="hat" src="hat.png">
+<img id="glasses" src="glasses.png">
+
 </body>
 </html>
