--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -1,9 +1,9 @@
 <!--
 Write your names here:
-1.
-2.
+1. Karan Shetty
+2. Jon Bent
 We spent [#] hours on this challenge.
--->
+-->1.5
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
 
@@ -278,4 +278,4 @@ We spent [#] hours on this challenge.
     </footer>
   <!-- Add your reflection here as a comment. -->
   </body>
-</html>
+</html
