Added reflection to gps2-1.html.

--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -277,5 +277,6 @@ We spent [#] hours on this challenge.
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
   <!-- Add your reflection here as a comment. -->
+  I think after working on today's GPS, my understanding of positioning items using CSS has definitely gotten better. After discussing margins, borders, and padding, I have a clearer understanding of what each term refers to in the context of CSS. I also got more comfortable using the float property, which I opted to avoid in favor of the display property, for which I'm thankful for our guide insisting on us to use.
   </body>
 </html
