Add some more html to index.html. Add some css to style.css. Add ability to add and remove items in script.js.

--- a/web_dev/jquery/index.html
+++ b/web_dev/jquery/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Simple Checklist</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-
+	<h1>Welcome to the Simple Checklist!</h1>
+	<form>
+		<input type="text" name="entryfield">
+	</form>
+	<br/>
+	<div id="button">Submit</div>
+	<br/>
+	<h2>Current List:</h2>
+	<br/>
+	<div class="list"></div>
 </body>
 </html>
